--- a/_includes/content/download.html
+++ b/_includes/content/download.html
@@ -91,63 +91,67 @@ The following optional dependencies improve user experience:
   The following distributions provide pyspread as a package
   (latest release linked):
   <br> <br>
-  <table style=" text-align: left; width: 325px;" border="0"
-    cellpadding="4" cellspacing="0">
-    <tbody>
-      <tr>
-        <td style="text-align: center;"><img style=" width:
-            24px; height: 24px;" alt="Arch logo"
-            src="http://manns.github.io/pyspread/images/arch-logo-small.png"
-            align="middle"><br>
-        </td>
-        <td style="text-align: left;">Arch</td>
-        <td><a
-            href="https://aur.archlinux.org/packages/pyspread/">pyspread
-            v0.3.2</a><br>
-        </td>
-      </tr>
-      <tr>
-        <td style="text-align: center;"><img style=" width:
-            20px; height: 24px;" alt="Debian logo"
-            src="http://manns.github.io/pyspread/images/debian-logo-small.png"
-            align="middle"></td>
-        <td style="text-align: left;">Debian</td>
-        <td><a
-            href="https://packages.debian.org/de/sid/pyspread">pyspread
-            v0.3.3</a></td>
-      </tr>
-      <tr>
-        <td style="text-align: center;"><img style=" width:
-            23px; height: 24px;" alt="Mageia logo"
-            src="http://manns.github.io/pyspread/images/mageia-logo-small.png"
-            align="middle"></td>
-        <td style=" text-align: left;">Mageia</td>
-        <td><a href="http://rpm.pbone.net/index.php3/stat/4/idpl/27539765/dir/mageia_cauldron/com/pyspread-0.3.3-3.mga5.x86_64.rpm.html">pyspread
-            v0.3.3</a></td>
-      </tr>
-      <tr>
-        <td style="text-align: center;"><img style=" width:
-            24px; height: 24px;" alt="Slackware logo"
-            src="http://manns.github.io/pyspread/images/slackware-logo-small.png"><br>
-        </td>
-        <td style="text-align: left;">Slackware</td>
-        <td><a
-            href="http://slackbuilds.org/repository/14.1/office/pyspread/">pyspread
-            v0.3.2</a></td>
-      </tr>
-      <tr>
-        <td style="vertical-align: top; text-align: center;"><img
-            style=" width: 24px; height: 24px;" alt="Ubuntu
-            logo" src="http://manns.github.io/pyspread/images/ubuntu-logo-small.png"
-            align="middle"></td>
-        <td style="vertical-align: top;">Ubuntu</td>
-        <td style="vertical-align: top;"><a
-            href="http://packages.ubuntu.com/de/vivid/pyspread">pyspread
-            v0.3.3</a></td>
-      </tr>
-    </tbody>
-  </table>
-  <br>
+
+</p>
+
+<table class="one_line_heading" style=" text-align: left; width: 325px;"
+       border="0" cellpadding="4" cellspacing="0">
+  <tbody>
+    <tr>
+      <td style="text-align: center;"><img style=" width:
+          24px; height: 24px;" alt="Arch logo"
+          src="http://manns.github.io/pyspread/images/arch-logo-small.png"
+          align="middle"><br>
+      </td>
+      <td style="text-align: left;">Arch</td>
+      <td><a
+          href="https://aur.archlinux.org/packages/pyspread/">pyspread
+          v0.3.2</a><br>
+      </td>
+    </tr>
+    <tr>
+      <td style="text-align: center;"><img style=" width:
+          20px; height: 24px;" alt="Debian logo"
+          src="http://manns.github.io/pyspread/images/debian-logo-small.png"
+          align="middle"></td>
+      <td style="text-align: left;">Debian</td>
+      <td><a
+          href="https://packages.debian.org/de/sid/pyspread">pyspread
+          v0.3.3</a></td>
+    </tr>
+    <tr>
+      <td style="text-align: center;"><img style=" width:
+          23px; height: 24px;" alt="Mageia logo"
+          src="http://manns.github.io/pyspread/images/mageia-logo-small.png"
+          align="middle"></td>
+      <td style=" text-align: left;">Mageia</td>
+      <td><a href="http://rpm.pbone.net/index.php3/stat/4/idpl/27539765/dir/mageia_cauldron/com/pyspread-0.3.3-3.mga5.x86_64.rpm.html">pyspread
+          v0.3.3</a></td>
+    </tr>
+    <tr>
+      <td style="text-align: center;"><img style=" width:
+          24px; height: 24px;" alt="Slackware logo"
+          src="http://manns.github.io/pyspread/images/slackware-logo-small.png"><br>
+      </td>
+      <td style="text-align: left;">Slackware</td>
+      <td><a
+          href="http://slackbuilds.org/repository/14.1/office/pyspread/">pyspread
+          v0.3.2</a></td>
+    </tr>
+    <tr>
+      <td style="vertical-align: top; text-align: center;"><img
+          style=" width: 24px; height: 24px;" alt="Ubuntu
+          logo" src="http://manns.github.io/pyspread/images/ubuntu-logo-small.png"
+          align="middle"></td>
+      <td style="vertical-align: top;">Ubuntu</td>
+      <td style="vertical-align: top;"><a
+          href="http://packages.ubuntu.com/de/vivid/pyspread">pyspread
+          v0.3.3</a></td>
+    </tr>
+  </tbody>
+</table>
+
+<p class="one_line_heading">
 
   For these distributions, the easiest way is to install
   pyspread from the repositories. The source distribution can
