--- a/_includes/head.html
+++ b/_includes/head.html
@@ -41,14 +41,15 @@
         padding-right:120px;
     }
 
-    ul, ol {
+    ul, ol, table {
         text-align:justify;
         position: relative;
         left:100px;
         padding-right:100px;
     }
 
-    p.one_line_heading, ul.one_line_heading, ol.one_line_heading {
+    p.one_line_heading, ul.one_line_heading, ol.one_line_heading,
+    table.one_line_heading {
         top:-2.1em;
     }
 
