--- a/_includes/head.html
+++ b/_includes/head.html
@@ -34,14 +34,14 @@
         text-decoration: overline;
     }
 
-    p {
+    p, table {
         text-align:justify;
         position: relative;
         left:120px;
         padding-right:120px;
     }
 
-    ul, ol, table {
+    ul, ol {
         text-align:justify;
         position: relative;
         left:100px;
