--- a/_includes/content/docs.html
+++ b/_includes/content/docs.html
@@ -1,73 +1,51 @@
-<table border="0" cellpadding="15" cellspacing="0" style=
-"text-align: left; width: 100%; margin-left: auto; margin-right: auto;">
-    <tbody>
-        <tr>
-            <th style=
-            "vertical-align: top; background-color: white; width: 102px;">user
-            manual<br></th>
+<aside>
+</aside>
 
-            <td style="vertical-align: top;">
-                <a href="First%20steps.html">First steps into pyspread.</a>
-            </td>
 
-            <td style="vertical-align: top;"><br></td>
+<h1>Use cases</h1>
 
-            <td style="width: 211px;"><br></td>
-        </tr>
+<p class="one_line_heading">
+  <a href="https://manns.github.io/pyspread/examples/pyspread_presentation.pdf">
+    Presentations with pyspread
+  </a>
+  (
+  <a href="https://manns.github.io/pyspread/examples/pyspread_presentation.pys">
+    pys file
+  </a>
+  )
+</p>
 
-        <tr>
-            <th style="vertical-align: top;">Tutorial<br></th>
 
-            <td style="vertical-align: top;">
-                <a href="tutorial.html">The pyspread tutorial.</a>
-            </td>
+<h1>Tutorials</h1>
 
-            <td style="vertical-align: top;"><br></td>
+<p class="one_line_heading">
+  <a href="tutorial.html">The pyspread tutorial.</a>
+  <br> <br>
+  <a href="videos/pyspread_podcast_1.mp4">
+    Screencast: How to import large amounts of data.
+  </a>
+</p>
 
-            <td style="vertical-align: top;"><br></td>
-        </tr>
 
-        <tr>
-            <th style="vertical-align: top;">faq<br></th>
+<h1>User manual</h1>
 
-            <td style="vertical-align: top;">
-                <a href="FAQ.html">Frequently asked questions.</a><br>
-            </td>
+<p class="one_line_heading">
+  <a href="First%20steps.html">First steps into pyspread.</a>
+</p>
 
-            <td style="vertical-align: top;"><br></td>
 
-            <td style="vertical-align: top;"><br></td>
-        </tr>
+<h1>FAQ</h1>
 
-        <tr>
-            <th style="vertical-align: top;">use case<br></th>
+<p class="one_line_heading">
+  <a href="FAQ.html">Frequently asked questions.</a><br>
+</p>
 
-            <td style="vertical-align: top;">
-                <a href="https://manns.github.io/pyspread/examples/pyspread_presentation.pdf">Presentations with pyspread</a>
-		(<a href="https://manns.github.io/pyspread/examples/pyspread_presentation.pys">pys file</a>)<br>
-            </td>
 
-            <td style="vertical-align: top;"><br></td>
-
-            <td style="vertical-align: top;"><br></td>
-        </tr>
-
-        <tr>
-            <th style="vertical-align: top;">podcast<br></th>
-
-            <td style="vertical-align: top;">
-                <a href="videos/pyspread_podcast_1.mp4">How to import large
-                amounts of data.</a><br>
-            </td>
-
-            <td style="vertical-align: top;"><br></td>
-
-            <td style="vertical-align: top;"><br></td>
-        </tr>
-    </tbody>
-</table>
-
-<p><span style="font-style: italic;">Copyright Martin Manns<br>
-Contact mmanns &lt; at &gt; gmx &lt; dot &gt; net<br style=
-"font-style: italic;"></span> <span style="font-style: italic;">Last changed:
-27. December 2014</span></p>
+<p class="impressum">
+  Copyright
+  <a href="mailto:mmanns <at> gmx <dot> net">
+    Martin Manns (mmanns &lt; at &gt; gmx &lt; dot &gt; net)
+  </a>
+  <br> <br>
+  Last changed: 28. December  2014</span>
+</p>
