Contribution page revamped

--- a/_includes/content/docs.html
+++ b/_includes/content/docs.html
@@ -8,11 +8,7 @@
   <a href="https://manns.github.io/pyspread/examples/pyspread_presentation.pdf">
     Presentations with pyspread
   </a>
-  (
-  <a href="https://manns.github.io/pyspread/examples/pyspread_presentation.pys">
-    pys file
-  </a>
-  )
+  (<a href="https://manns.github.io/pyspread/examples/pyspread_presentation.pys">pys file</a>)
 </p>
 
 
