--- a/_includes/content/contribute.html
+++ b/_includes/content/contribute.html
@@ -75,8 +75,8 @@
 Chart overview:
 </p>
 
-<table class="one_line_heading" style=" text-align: left; width: 100%;"
-       border="1" cellpadding="2" cellspacing="0">
+<table class="one_line_heading" style=" text-align: left;"
+       border="0" cellpadding="2" cellspacing="0">
   <tbody>
     <tr>
       <td style="vertical-align: top; font-weight: bold;">Icon<br>
