--- a/_includes/content/contribute.html
+++ b/_includes/content/contribute.html
@@ -76,7 +76,7 @@ Chart overview:
 </p>
 
 <table class="one_line_heading" style=" text-align: left;"
-       border="0" cellpadding="2" cellspacing="5">
+       border="0" cellpadding="2" cellspacing="8">
   <tbody>
     <tr>
       <td style="vertical-align: top; font-weight: bold;">Icon<br>
@@ -230,7 +230,7 @@ Chart overview:
 
 
 <p class="impressum">
-  Copyright
+  Author:
   <a href="mailto:mmanns <at> gmx <dot> net">
     Martin Manns (mmanns &lt; at &gt; gmx &lt; dot &gt; net)
   </a>
