--- a/_includes/content/download.html
+++ b/_includes/content/download.html
@@ -215,7 +215,7 @@
 
 
 <p class="impressum">
-  Copyright
+  Author:
   <a href="mailto:mmanns <at> gmx <dot> net">
     Martin Manns (mmanns &lt; at &gt; gmx &lt; dot &gt; net)
   </a>
