--- a/_includes/head.html
+++ b/_includes/head.html
@@ -54,6 +54,7 @@
     }
 
     p.impressum {
+        font-family: serif;
         font-size:10pt;
         font-style: italic;
         text-align:left;
