--- a/_includes/content/docs.html
+++ b/_includes/content/docs.html
@@ -38,7 +38,7 @@
 
 
 <p class="impressum">
-  Copyright
+  Author:
   <a href="mailto:mmanns <at> gmx <dot> net">
     Martin Manns (mmanns &lt; at &gt; gmx &lt; dot &gt; net)
   </a>
