--- a/_includes/content/faq.html
+++ b/_includes/content/faq.html
@@ -1,89 +1,57 @@
-<h1 class="title">pyspread FAQ</h1>
+<aside>
+</aside>
 
-<table border="0" cellpadding="15" cellspacing="0" style=
-"text-align: left; width: 100%; margin-left: auto; margin-right: auto;vertical-align: top;">
-    <tbody>
-        <tr>
-            <th style=
-            "vertical-align: top; background-color: white; width: 102px;"><h3>What
-            kind of expressions can a cell contain?</h3></th>
+<h1>pyspread FAQ</h1>
 
-            <td style="vertical-align: top;">
-                A cell can contain any normal Python expression such as a list
-                comprehension or a generator expression. However, it cannot
-                contain statements such as
-                <pre>
-for i in xrange(10): pass<br>
-</pre>
+<h2>What kind of expressions can a cell contain?</h2>
 
-                <p>If you want to program more complex algorithms then use the
-                macro editor.<br>
-                There, you can define functions that use arbitrary Python code
-                and is callable from any cell.</p>
+<p class="one_line_heading">
+  A cell can contain any normal Python expression such as a list
+  comprehension or a generator expression. However, it cannot
+  contain statements such as
+  <pre>
+    for i in xrange(10): pass<br>
+  </pre>
 
-                <p><strong>Example:</strong><br>
-                Type in the macro editor:</p>
-                <pre>
-def factorize(number):<br>    """Silly factorizing algorithm for demonstration purposes only"""<br>    counter = 1<br>    result = []<br>    while counter &lt;= number:<br>        if number % counter == 0:<br>            result.append(counter)<br>        counter += 1<br>    return result
-</pre>
+  <br>If you want to program more complex algorithms then use the
+  macro editor.
+  There, you can define functions that use arbitrary Python code
+  and is callable from any cell.
+</p>
+<p class="one_line_heading">
+  <strong>Example:</strong><br>
+  Type in the macro editor:</p>
+  <pre>
+    def factorize(number):
+    <br>    """Silly factorizing algorithm for demonstration purposes only"""<br>    counter = 1<br>    result = []<br>    while counter &lt;= number:<br>        if number % counter == 0:<br>            result.append(counter)<br>        counter += 1<br>    return result
+  </pre>
 
-                <p>And in the cell:</p>
-                <pre>
- factorize(25)
-</pre>
+  <br>And in the cell:
+  <pre>
+   factorize(25)
+  </pre>
 
-                <p>Result is:</p>
-                <pre>
- [1 5 25]
-</pre>
-            </td>
+  <br>Result is:
+  <pre>
+   [1 5 25]
+  </pre>
+</p>
 
-            <td style="vertical-align: top;"><br></td>
 
-            <td style="width: 211px;"><br></td>
-        </tr>
+<h2>What are the boundaries for the number of rows, columns and tables?</h2>
 
-        <tr>
-            <th style="vertical-align: top;"><h3>What are the boundaries for the
-            number of rows/columns/sheets?</h3></th>
+<p class="one_line_heading">
+  These are limited by your memory (and maybe your stack restriction if any).
+  However, the grid is restricted to a number that changes with row size.
+  For standard size on GTK platforms, 80 000 000 rows can be displayed.
+</p>
 
-            <td style="vertical-align: top;">These are limited by your memory
-            (and maybe your stack restriction if any). However, the grid is
-            restricted to a number that changes with row size. For standard
-            size (GTK), 80 000 000 rows can be displayed.</td>
 
-            <td style="vertical-align: top;"><br></td>
-
-            <td style="vertical-align: top;"><br></td>
-        </tr>
-
-        <tr>
-            <th style="vertical-align: top;"><h3>Is the new file-format considered
-            stable, or will it change again?</h3></th>
-
-            <td style="vertical-align: top;">The new file format is stable.
-            This means that future versions of Pyspread will be able to read
-            the old format.</td>
-
-            <td style="vertical-align: top;"><br></td>
-
-            <td style="vertical-align: top;"><br></td>
-        </tr>
-
-        <tr>
-            <th style="vertical-align: top;"><h3>Can pyspread still read the old
-            format?</h3></th>
-
-            <td style="vertical-align: top;">Unfortunately not. If you have old
-            pys files, install both versions of pyspread and copy the cell
-            contents via the Clipboard from the old to the new version.
-            However, cell formatting cannot be preserved this way.</td>
-
-        </tr>
-    </tbody>
-</table>
-
-<p><span style="font-style: italic;">Copyright Martin Manns<br>
-Contact mmanns &lt; at &gt; gmx &lt; dot &gt; net<br style=
-"font-style: italic;"></span> <span style="font-style: italic;">Last changed:
-27. December 2014</span></p>
+<p class="impressum">
+  Author:
+  <a href="mailto:mmanns <at> gmx <dot> net">
+    Martin Manns (mmanns &lt; at &gt; gmx &lt; dot &gt; net)
+  </a>
+  <br> <br>
+  Last changed: 28. December  2014</span>
+</p>
