--- a/_includes/content/home.html
+++ b/_includes/content/home.html
@@ -121,7 +121,7 @@
 </p>
 
 <p class="impressum">
-  Copyright
+  Author:
   <a href="mailto:mmanns <at> gmx <dot> net">
     Martin Manns (mmanns &lt; at &gt; gmx &lt; dot &gt; net)
   </a>
