--- a/_includes/head.html
+++ b/_includes/head.html
@@ -20,7 +20,7 @@
         background-color:#ffffff;
     }
 
-    h1, p, ul, ol {
+    h1, h2, h3, p, ul, ol {
         font-size:12pt;
         margin-right: 220px;
     }
@@ -34,7 +34,7 @@
         text-decoration: overline;
     }
 
-    p, table {
+    p, h2, h3, table {
         text-align:justify;
         position: relative;
         left:120px;
@@ -54,9 +54,8 @@
     }
 
     p.impressum {
-        font-family: serif;
-        font-size:10pt;
-        font-style: italic;
+        font-size:9pt;
+        font-weight: lighter;
         text-align:left;
     }
 
