--- a/_includes/head.html
+++ b/_includes/head.html
@@ -34,7 +34,7 @@
         text-decoration: overline;
     }
 
-    p, h2, h3, table {
+    p, h2, h3, table, pre {
         text-align:justify;
         position: relative;
         left:120px;
@@ -48,7 +48,7 @@
         padding-right:100px;
     }
 
-    p.one_line_heading, ul.one_line_heading, ol.one_line_heading,
+    h2, h3, pre, p.one_line_heading, ul.one_line_heading, ol.one_line_heading,
     table.one_line_heading {
         top:-2.1em;
     }
