--- a/_includes/content/faq.html
+++ b/_includes/content/faq.html
@@ -12,8 +12,9 @@
   <pre>
     for i in xrange(10): pass<br>
   </pre>
-
-  <br>If you want to program more complex algorithms then use the
+</p>
+<p class="one_line_heading">
+  If you want to program more complex algorithms then use the
   macro editor.
   There, you can define functions that use arbitrary Python code
   and is callable from any cell.
@@ -25,13 +26,15 @@
     def factorize(number):
     <br>    """Silly factorizing algorithm for demonstration purposes only"""<br>    counter = 1<br>    result = []<br>    while counter &lt;= number:<br>        if number % counter == 0:<br>            result.append(counter)<br>        counter += 1<br>    return result
   </pre>
-
-  <br>And in the cell:
+</p>
+<p class="one_line_heading">
+  And in the cell:
   <pre>
    factorize(25)
   </pre>
-
-  <br>Result is:
+</p>
+<p class="one_line_heading">
+  Result is:
   <pre>
    [1 5 25]
   </pre>
