--- a/_includes/content/faq.html
+++ b/_includes/content/faq.html
@@ -20,8 +20,10 @@
   and is callable from any cell.
 </p>
 <p class="one_line_heading">
-  <strong>Example:</strong><br>
-  Type in the macro editor:</p>
+  <strong>Example:</strong>
+</p>
+<p class="one_line_heading">
+  Type in the macro editor:
   <pre>
     def factorize(number):
     <br>    """Silly factorizing algorithm for demonstration purposes only"""<br>    counter = 1<br>    result = []<br>    while counter &lt;= number:<br>        if number % counter == 0:<br>            result.append(counter)<br>        counter += 1<br>    return result
