--- a/_includes/content/download.html
+++ b/_includes/content/download.html
@@ -98,8 +98,8 @@
 
 </p>
 
-<table class="one_line_heading" style=" text-align: left; width: 325px;"
-       border="0" cellpadding="4" cellspacing="0">
+<table class="one_line_heading" style=" text-align: left;"
+       border="0" cellpadding="4" cellspacing="7">
   <tbody>
     <tr>
       <td style="text-align: center;"><img style=" width:
