download page polish

--- a/_includes/content/download.html
+++ b/_includes/content/download.html
@@ -109,8 +109,7 @@
       </td>
       <td style="text-align: left;">Arch</td>
       <td><a
-          href="https://aur.archlinux.org/packages/pyspread/">pyspread
-          v0.3.2</a><br>
+          href="https://aur.archlinux.org/packages/pyspread/">pyspread v0.3.2</a><br>
       </td>
     </tr>
     <tr>
@@ -120,8 +119,7 @@
           align="middle"></td>
       <td style="text-align: left;">Debian</td>
       <td><a
-          href="https://packages.debian.org/de/sid/pyspread">pyspread
-          v0.3.3</a></td>
+          href="https://packages.debian.org/de/sid/pyspread">pyspread v0.3.3</a></td>
     </tr>
     <tr>
       <td style="text-align: center;"><img style=" width:
@@ -129,8 +127,7 @@
           src="http://manns.github.io/pyspread/images/mageia-logo-small.png"
           align="middle"></td>
       <td style=" text-align: left;">Mageia</td>
-      <td><a href="http://rpm.pbone.net/index.php3/stat/4/idpl/27539765/dir/mageia_cauldron/com/pyspread-0.3.3-3.mga5.x86_64.rpm.html">pyspread
-          v0.3.3</a></td>
+      <td><a href="http://rpm.pbone.net/index.php3/stat/4/idpl/27539765/dir/mageia_cauldron/com/pyspread-0.3.3-3.mga5.x86_64.rpm.html">pyspread v0.3.3</a></td>
     </tr>
     <tr>
       <td style="text-align: center;"><img style=" width:
@@ -139,8 +136,7 @@
       </td>
       <td style="text-align: left;">Slackware</td>
       <td><a
-          href="http://slackbuilds.org/repository/14.1/office/pyspread/">pyspread
-          v0.3.2</a></td>
+          href="http://slackbuilds.org/repository/14.1/office/pyspread/">pyspread v0.3.2</a></td>
     </tr>
     <tr>
       <td style="vertical-align: top; text-align: center;"><img
@@ -149,8 +145,7 @@
           align="middle"></td>
       <td style="vertical-align: top;">Ubuntu</td>
       <td style="vertical-align: top;"><a
-          href="http://packages.ubuntu.com/de/vivid/pyspread">pyspread
-          v0.3.3</a></td>
+          href="http://packages.ubuntu.com/de/vivid/pyspread">pyspread v0.3.3</a></td>
     </tr>
   </tbody>
 </table>
