--- a/_includes/content/home.html
+++ b/_includes/content/home.html
@@ -97,7 +97,7 @@
 
 <p class="one_line_heading">
   This does not mean that Donna or Jack cannot work with pyspread. However,
-  Donna might find the larning curve for using Python code in cells too steep.
+  Donna might find the learning curve for using Python code in cells too steep.
   Jack on the other hand might be disappointed because his long running tasks
   are likely to lock up pyspread.
 </p>
