--- a/_includes/content/download.html
+++ b/_includes/content/download.html
@@ -62,7 +62,7 @@
   These instructions are for installing the source tarball
   <br>
   <a href="https://pypi.python.org/packages/source/p/pyspread/pyspread-0.4.tar.gz#md5=6188e2c4c2ed9c58add7f26b70b7e05d">pyspread v0.4</a>
-  (<a href="https://manns.github.io/pyspread/releases/pyspread-0.4.tar.gz.gpg">gpg sig</a>).
+  (<a href="https://manns.github.io/pyspread/releases/pyspread-0.4.tar.gz.sig">gpg sig</a>).
   <br> <br>
   Installation:
   <br>
