--- a/_includes/content/tutorial.html
+++ b/_includes/content/tutorial.html
@@ -1,38 +1,44 @@
-<h1>Pyspread Tutorial</h1>
+<aside>
+</aside>
 
-<h2>Running pyspread</h2>
 
-<p>Run pyspread with<br></p>
-<pre>
-$ pyspread
-</pre><br>
+<h0>Pyspread Tutorial</h0>
 
-<p>Select the Menu File &rarr; New<br>
+<h1>Running pyspread</h1>
+
+<p class="one_line_heading">
+    Run pyspread with
+    <pre>
+        $ pyspread
+     </pre>
+</p>
+
+
+<p class="one_line_heading">Select the Menu File &rarr; New<br>
 Enter 200 rows, 10 columns and 5 tables in the pop-up menu.</p>
 
-<p><img alt="image:Tutorial1.png" border="0" src="images/Tutorial1.png"></p>
+<p class="one_line_heading"><img alt="image:Tutorial1.png" border="0" src="images/Tutorial1.png"></p>
 
-<p>After clicking OK, you get a new table with the typed-in dimensions.</p>
+<p class="one_line_heading">After clicking OK, you get a new table with the typed-in dimensions.</p>
 
-<h2>Standard cell commands</h2>
+<h1>Standard cell commands</h1>
 
-<p>Select the top-left cell and type:<br></p>
+<p class="one_line_heading">Select the top-left cell and type:<br></p>
 <pre>
 1 + 5 * 2
 </pre><br>
 
-<p>The spreadsheet evaluates this Python statement and displays the
-result:<br></p>
+<p class="one_line_heading">The spreadsheet evaluates this Python statement and displays the result:<br></p>
 <pre>
 11
 </pre><br>
 
-<p>In the cell that is one row below (cell (1, 0, 0)), type<br></p>
+<p class="one_line_heading">In the cell that is one row below (cell (1, 0, 0)), type<br></p>
 <pre>
 S
 </pre><br>
 
-<p>As we see from the result, S is a known object. In fact, it is the grid
+<p class="one_line_heading">As we see from the result, S is a known object. In fact, it is the grid
 object that we are currently working in.</p>
 
 <h2>Absolute addressing of cells</h2>
