Header style change

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -20,6 +20,15 @@
         background-color:#ffffff;
     }
 
+    h0 {
+        font-size:14pt;
+        font-family: Arial,Helvetica,sans-serif;
+        font-weight: bold;
+        width:140px;
+        text-transform: lowercase;
+        text-decoration: overline;
+    }
+
     h1, h2, h3, p, ul, ol {
         font-size:12pt;
         margin-right: 220px;
@@ -34,7 +43,7 @@
         text-decoration: overline;
     }
 
-    p, h2, h3, table, pre {
+    p, h0, h2, h3, table, pre {
         text-align:justify;
         position: relative;
         left:120px;
