--- a/_includes/head.html
+++ b/_includes/head.html
@@ -20,15 +20,6 @@
         background-color:#ffffff;
     }
 
-    h0 {
-        font-size:14pt;
-        font-family: Arial,Helvetica,sans-serif;
-        font-weight: bold;
-        width:140px;
-        text-transform: lowercase;
-        text-decoration: overline;
-    }
-
     h1, h2, h3, p, ul, ol {
         font-size:12pt;
         margin-right: 220px;
@@ -41,6 +32,14 @@
         width:120px;
         text-transform: lowercase;
         text-decoration: overline;
+    }
+
+
+    h1.title {
+        font-size:16pt;
+        width:140px;
+        text-transform: lowercase;
+        text-decoration: none;
     }
 
     p, h0, h2, h3, table, pre {
