--- a/_includes/head.html
+++ b/_includes/head.html
@@ -36,7 +36,8 @@
 
     h1.title {
         font-size:16pt;
-        width:140px;
+        left:120px;
+        padding-right:120px;
         text-transform: lowercase;
         text-decoration: none;
     }
