--- a/_includes/head.html
+++ b/_includes/head.html
@@ -37,7 +37,7 @@
     h1.title {
         font-size:16pt;
         left:120px;
-        padding-right:120px;
+        width:220px;
         text-transform: lowercase;
         text-decoration: none;
     }
