Tutorial style fix

--- a/_includes/content/tutorial.html
+++ b/_includes/content/tutorial.html
@@ -65,7 +65,7 @@
     To access a cell, we can index the grid. Replace S with
     <pre>
         S[0, 0, 0]
-    </pre>
+    </pre><br>
     and the same result as in the top-left cell that has the index (0, 0, 0) is
     displayed.<br>
     The first index is the row, the second parameter is the column and the third
