--- a/_includes/content/tutorial.html
+++ b/_includes/content/tutorial.html
@@ -207,13 +207,13 @@
     rationals in the next two cells:
     <pre>
         q = fractions.fraction("1/37")
-    </pre><br>
+    </pre>
     <pre>
         1/37
-    </pre><br>
+    </pre>
     <pre>
         229 / 13
-    </pre><br>
+    </pre>
 </p>
 
 <p class="one_line_heading">
@@ -258,7 +258,7 @@
     If everything shall be summed, the numpy.sum function has to be used:
     <pre>
         numpy.sum(S[1:16,0:2,0])
-    </pre><br>
+    </pre>
     yields 240.
 </p>
 
@@ -278,22 +278,24 @@
     Type into cell (1, 0, 3):
     <pre>
         numpy.arange(0.0, 10.0, 0.1)
-    </pre><br>
+    </pre>
     Create the y value list in cell (2, 0, 3):
     <pre>
         [math.sin(x) for x in S[1, 0, 3]]
-    </pre><br>
+    </pre>
     Now open the chart dialog window and enter
     <pre>
         S[1, 0, 3]
-    </pre><br>
+    </pre>
     for x values and
     <pre>
         S[2, 0, 3]
-    </pre><br>
+    </pre>
     for y values. A figure displays inside the dialog. Press Ok and the
     figure is displayed inside the current cell. It scales with cell size.
 </p>
+
+<br><br>
 
 <p class="impressum">
   Author:
