--- a/_includes/content/tutorial.html
+++ b/_includes/content/tutorial.html
@@ -65,9 +65,9 @@
     To access a cell, we can index the grid. Replace S with
     <pre>
         S[0, 0, 0]
-    </pre><br>
+    </pre>
     and the same result as in the top-left cell that has the index (0, 0, 0) is
-    displayed.<br>
+    displayed.
     The first index is the row, the second parameter is the column and the third
     parameter is the table.<br>
     Now replace the expression in the top-left cell by
@@ -240,7 +240,7 @@
     entering into cell (16,0,0):
     <pre>
         sum(S[1:16,0,0])
-    </pre><br>
+    </pre>
     yields 120 as expected.
 </p>
 
@@ -250,7 +250,7 @@
     (16,0,0) to
     <pre>
         sum(S[1:16,0:2,0])
-    </pre><br>
+    </pre>
     yields [120 120].
 </p>
 
