--- a/_includes/content/tutorial.html
+++ b/_includes/content/tutorial.html
@@ -66,6 +66,8 @@
     <pre>
         S[0, 0, 0]
     </pre>
+</p>
+<p class="one_line_heading">
     and the same result as in the top-left cell that has the index (0, 0, 0) is
     displayed.
     The first index is the row, the second parameter is the column and the third
@@ -274,7 +276,7 @@
     pyspread specific function that returns a matplotlib figure. You can use the
     object S inside the chart dialog window.
 
-<p<p class="one_line_heading">
+<p class="one_line_heading">
     Type into cell (1, 0, 3):
     <pre>
         numpy.arange(0.0, 10.0, 0.1)
