--- a/_includes/content/tutorial.html
+++ b/_includes/content/tutorial.html
@@ -243,6 +243,8 @@
     <pre>
         sum(S[1:16,0,0])
     </pre>
+</p>
+<p class="one_line_heading">
     yields 120 as expected.
 </p>
 
@@ -253,6 +255,8 @@
     <pre>
         sum(S[1:16,0:2,0])
     </pre>
+</p>
+<p class="one_line_heading">
     yields [120 120].
 </p>
 
@@ -261,6 +265,8 @@
     <pre>
         numpy.sum(S[1:16,0:2,0])
     </pre>
+</p>
+<p class="one_line_heading">
     yields 240.
 </p>
 
@@ -281,18 +287,26 @@
     <pre>
         numpy.arange(0.0, 10.0, 0.1)
     </pre>
+</p>
+<p class="one_line_heading">
     Create the y value list in cell (2, 0, 3):
     <pre>
         [math.sin(x) for x in S[1, 0, 3]]
     </pre>
+</p>
+<p class="one_line_heading">
     Now open the chart dialog window and enter
     <pre>
         S[1, 0, 3]
     </pre>
+</p>
+<p class="one_line_heading">
     for x values and
     <pre>
         S[2, 0, 3]
     </pre>
+</p>
+<p class="one_line_heading">
     for y values. A figure displays inside the dialog. Press Ok and the
     figure is displayed inside the current cell. It scales with cell size.
 </p>
