--- a/_includes/content/tutorial.html
+++ b/_includes/content/tutorial.html
@@ -199,7 +199,7 @@
     and manipulation methods are available.<br>
     Type into cell (5, 2, 2):
     <pre>
-        gmpy = __import__("fractions")
+        fractions = __import__("fractions")
     </pre>
 </p>
 
@@ -208,7 +208,7 @@
     number object in cell (6, 2, 2) in order to reduce typing and type in two
     rationals in the next two cells:
     <pre>
-        q = fractions.fraction("1/37")
+        q = fractions.Fraction("1/37")
     </pre>
     <pre>
         1/37
