--- a/_includes/content/tutorial.html
+++ b/_includes/content/tutorial.html
@@ -208,14 +208,15 @@
     number object in cell (6, 2, 2) in order to reduce typing and type in two
     rationals in the next two cells:
     <pre>
+        p = fractions.Fraction("1/37")
+    </pre>
+    <pre>
         q = fractions.Fraction("1/37")
     </pre>
-    <pre>
-        1/37
-    </pre>
-    <pre>
-        229 / 13
-    </pre>
+</p>
+
+<p class="one_line_heading">
+    The results 1/37 and 229 / 13 appear.
 </p>
 
 <p class="one_line_heading">
